@@ -42,34 +42,6 @@ html {
  background:rgba(72, 72, 72, 0.9) !important;
 }
 
-.np-slider {
- color:#346dd2;
- background-color:#444;
- border-top:1px solid #212121 !important;
- border-bottom:2px solid #212121 !important;
-}
-
-.np-slider-mobile {
- color:#346dd2;
- background-color:rgba(0, 0, 0, 0.15) !important;
-}
-
-progress::-webkit-progress-bar {
- background-color:#444;
-}
-
-.np-slider-mobile::-webkit-progress-bar {
- background-color:rgba(0, 0, 0, 0.15) !important;
-}
-
-progress::-webkit-progress-value {
- background-color:#346dd2;
-}
-
-progress::-moz-progress-bar {
- background-color:#346dd2;
-}
-
 .subtoolbar {
  background-color:#424242 !important;
  border-bottom:1px solid #333;
